// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 1: cirno init 1`] = `
stdout: |2
   SUCCESS  Cirno project initialized at /data.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: releases
        entries: []
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps: []
  - type: directory
    name: instances
    entries: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 2: cirno import /fixtures/foo 1`] = `
stdout: |
  ➤ YN0000: · Yarn 4.3.1
  ➤ YN0000: ┌ Resolution step
  ➤ YN0000: └ Completed
  ➤ YN0000: ┌ Fetch step
  ➤ YN0000: └ Completed
  ➤ YN0000: ┌ Link step
  ➤ YN0000: └ Completed
  ➤ YN0000: · Done
   SUCCESS  Successfully imported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          backups: []
  - type: directory
    name: instances
    entries:
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;

exports[`step 3: cirno backup <#1> 1`] = `
stdout: |2
   SUCCESS  Successfully created a backup instance 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          backups:
            - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
              type: manual
              createTime: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;

exports[`step 4: cirno restore <#1> 1`] = `
stdout: |2
   ERROR  Backup cd5fbb72-8243-5ccf-b8ca-ceee993585f7 not found.
stderr: ''
code: 1
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          backups:
            - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
              type: manual
              createTime: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;

exports[`step 5: cirno backup <#1> 1`] = `
stdout: |2
   SUCCESS  Successfully created a backup instance b6394418-863d-5b5f-871f-dde7e8292e29.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          backups:
            - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
              type: manual
              createTime: '<timestamp>'
            - id: b6394418-863d-5b5f-871f-dde7e8292e29
              type: manual
              createTime: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: b6394418-863d-5b5f-871f-dde7e8292e29
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;

exports[`step 6: cirno restore <#2> 1`] = `
stdout: |2
   SUCCESS  App cd5fbb72-8243-5ccf-b8ca-ceee993585f7 is successfully restored to backup 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          backups:
            - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
              type: manual
              createTime: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;

exports[`step 7: cirno remove <#1> 1`] = `
stdout: ''
stderr: >
  node:internal/fs/promises:782
    return await PromisePrototypeThen(
           ^

  Error: ENOENT: no such file or directory, rename '/data/instances/5ab7bff9-d000-5c3b-83ac-4c3c4296ee19' ->
  '/Users/shigma/Documents/touhou/cordis/cirno/temp/75c793e5-b16e-49a8-b78f-5ffdb3bcac0f/data/instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7'
      at async rename (node:internal/fs/promises:782:10)
      at CAC.<anonymous> (/Users/shigma/Documents/touhou/cordis/cirno/src/commands/remove.ts:30:9) {
    errno: -2,
    code: 'ENOENT',
    syscall: 'rename',
    path: '/Users/shigma/Documents/touhou/cordis/cirno/temp/75c793e5-b16e-49a8-b78f-5ffdb3bcac0f/data/instances/5ab7bff9-d000-5c3b-83ac-4c3c4296ee19',
    dest: '/Users/shigma/Documents/touhou/cordis/cirno/temp/75c793e5-b16e-49a8-b78f-5ffdb3bcac0f/data/instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7'
  }


  Node.js v20.15.0
code: 1
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          backups:
            - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
              type: manual
              createTime: '<timestamp>'
  - type: directory
    name: instances
    entries: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 8: cirno remove <#3> 1`] = `
stdout: |2
   ERROR  Instance b6394418-863d-5b5f-871f-dde7e8292e29 not found.
stderr: ''
code: 1
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: index
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          backups:
            - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
              type: manual
              createTime: '<timestamp>'
  - type: directory
    name: instances
    entries: []
  - type: directory
    name: temp
    entries: []

`;
